[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/Inventory Backgrounds/menubook2.png" type="Texture" id=1]
[ext_resource path="res://assets/Inventory Backgrounds/menubook5.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Menu_Book.gd" type="Script" id=3]
[ext_resource path="res://assets/Inventory Backgrounds/menubook3.png" type="Texture" id=5]
[ext_resource path="res://assets/Inventory Backgrounds/menubook0.png" type="Texture" id=6]
[ext_resource path="res://assets/Inventory Backgrounds/menubook4.png" type="Texture" id=7]
[ext_resource path="res://assets/Inventory Backgrounds/menubook6.png" type="Texture" id=9]
[ext_resource path="res://assets/Inventory Backgrounds/menubook1.png" type="Texture" id=12]
[ext_resource path="res://assets/UI v2/LeftArrow.png" type="Texture" id=13]
[ext_resource path="res://Scenes/UIv2/Button.tscn" type="PackedScene" id=14]
[ext_resource path="res://assets/UI v2/RightArrow.png" type="Texture" id=15]

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 12 ), ExtResource( 1 ), ExtResource( 5 ), ExtResource( 7 ), ExtResource( 2 ), ExtResource( 9 ) ],
"loop": false,
"name": "default",
"speed": 10.0
} ]

[node name="MenuBook" type="AnimatedSprite"]
position = Vector2( 500, 250 )
scale = Vector2( 3, 3 )
frames = SubResource( 10 )
script = ExtResource( 3 )

[node name="LeftArrow" parent="." instance=ExtResource( 14 )]
visible = false
margin_left = -66.0
margin_top = 32.0
margin_right = -53.0
margin_bottom = 43.0
icon = ExtResource( 13 )

[node name="RightArrow" parent="." instance=ExtResource( 14 )]
visible = false
margin_left = 52.0
margin_top = 32.0
margin_right = 65.0
margin_bottom = 43.0
icon = ExtResource( 15 )

[connection signal="pressed" from="LeftArrow" to="." method="_on_LeftArrow_pressed"]
[connection signal="pressed" from="RightArrow" to="." method="_on_RightArrow_pressed"]
